--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e0bc3c56",
+   "id": "b1419042",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c77ba75c",
+   "id": "0faee3b7",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2783364f",
+   "id": "1f6ec918",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "263d38b8",
+   "id": "ed17123d",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "036540a7",
+   "id": "5f92f734",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "192010d0",
+   "id": "7c5e7fea",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "45b3ce7a",
+   "id": "423920fd",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b440c6c",
+   "id": "56461c7b",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "abe518e3",
+   "id": "b5eac5f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02e8713f",
+   "id": "d1e3bbec",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b3bb33",
+   "id": "9f919d6d",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b81e013",
+   "id": "4c55d61e",
    "metadata": {},
    "outputs": [
     {
@@ -223,31 +223,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7b299485",
+   "execution_count": 16,
+   "id": "37d7f4b2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your nameshraddha\n",
-      "Enter your cityreading\n",
-      "hi, i am shraddhareading\n"
+      "Enter your name: shraddha\n",
+      "Enter your city: reading\n",
+      "hi, i am shraddha\n",
+      "i live in reading\n"
      ]
     }
    ],
    "source": [
     "name = input('Enter your name: ')\n",
     "city = input('Enter your city: ')\n",
-    "print('hi, i am' + name)\n",
-    "print ('i live in' + )"
+    "print('hi, i am ' + name)\n",
+    "print ('i live in ' + city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "88d7bae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: shraddha\n",
+      "Enter your city: reading\n",
+      "hi, i am shraddha  and i live in reading\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "city = input('Enter your city: ')\n",
+    "print('hi, i am ' + name, ' and i live in ' + city)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b9eb02",
+   "id": "b0688394",
    "metadata": {},
    "outputs": [],
    "source": []
