--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0cf88c38",
+   "id": "c2a377ad",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a83083c",
+   "id": "39311867",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fb203bf",
+   "id": "dab18e54",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f84426b5",
+   "id": "69916a19",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02c294b5",
+   "id": "ec735ed4",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "becf4752",
+   "id": "68bdb0ea",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "78a28ac4",
+   "id": "69890b3a",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6ea4dd",
+   "id": "8bb8c279",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -145,20 +145,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac5caec4",
+   "execution_count": 16,
+   "id": "a2b91e2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a User name: Jaspreet\n",
+      "Enter a City name: Ambala\n",
+      "Hi Jaspreet! Welcome to Ambala.\n"
+     ]
+    }
+   ],
    "source": [
     "user_name = input('Enter a User name: ')\n",
     "city_name = input('Enter a City name: ')\n",
-    "print ('Hi ' + user_name + '!' 'Welcome to ' + city_name + '.')"
+    "print ('Hi ' + user_name + '! ' 'Welcome to ' + city_name + '.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc7c3b45",
+   "id": "7069a40d",
    "metadata": {},
    "outputs": [],
    "source": []
