--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "00a4547d",
+   "id": "49ce64c5",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ae826369",
+   "id": "1e266e15",
    "metadata": {},
    "outputs": [
     {
@@ -75,32 +75,25 @@
     }
    ],
    "source": [
-    "name = input ('Name: ')\n",
-    "city = input ('City: ')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "b6dcdc85",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, Dmitrii from Krakow!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ('Hello, ' + name + ' from ' + city + '!')"
+    "name = input ('Enter Name: ')\n",
+    "city = input ('Enter City: ')\n",
+    "x = input ('Enter number: ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f54122",
+   "id": "f7d5f805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print ('Hello, ' + name + ' from ' + city + x + 'times!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5f79d6",
    "metadata": {},
    "outputs": [],
    "source": []
