--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1419042",
+   "id": "481e8fc7",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0faee3b7",
+   "id": "a417735e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f6ec918",
+   "id": "4ea401b0",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ed17123d",
+   "id": "72c9bcb3",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5f92f734",
+   "id": "f869f319",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7c5e7fea",
+   "id": "b6daeb29",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "423920fd",
+   "id": "0f76bdf2",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "56461c7b",
+   "id": "24eeedf7",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b5eac5f9",
+   "id": "a7a111fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d1e3bbec",
+   "id": "126e568e",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f919d6d",
+   "id": "58850cd2",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4c55d61e",
+   "id": "aaba9a2e",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "37d7f4b2",
+   "id": "865604b3",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "88d7bae1",
+   "execution_count": 21,
+   "id": "f27f7acb",
    "metadata": {},
    "outputs": [
     {
@@ -256,21 +256,21 @@
      "output_type": "stream",
      "text": [
       "Enter your name: shraddha\n",
-      "Enter your city: reading\n",
-      "hi, i am shraddha  and i live in reading\n"
+      "Enter your city: Reading\n",
+      "hi, i am shraddha and i live in Reading .\n"
      ]
     }
    ],
    "source": [
     "name = input('Enter your name: ')\n",
     "city = input('Enter your city: ')\n",
-    "print('hi, i am ' + name, ' and i live in ' + city)"
+    "print('hi, i am ' + name, 'and i live in ' + city, '.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0688394",
+   "id": "be4afb5d",
    "metadata": {},
    "outputs": [],
    "source": []
