--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "49ce64c5",
+   "id": "d935ae74",
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "1e266e15",
+   "execution_count": 43,
+   "id": "878f5e60",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Dmitrii\n",
-      "City: Krakow\n"
+      "Enter Name: Dima\n",
+      "Enter City: Krakow\n",
+      "Enter number: 5\n"
      ]
     }
    ],
@@ -82,18 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f7d5f805",
+   "execution_count": 45,
+   "id": "9974f1ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Dima from Krakow 5 times!\n"
+     ]
+    }
+   ],
    "source": [
-    "print ('Hello, ' + name + ' from ' + city + x + 'times!')"
+    "print ('Hello, ' + name + ' from ' + city + ' ' + x + ' times!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e5f79d6",
+   "id": "ffa4ba77",
    "metadata": {},
    "outputs": [],
    "source": []
