--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "323874df",
+   "id": "5e52d279",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c12e759f",
+   "id": "39343420",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "53dce838",
+   "id": "0a3debf7",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "181c1b9b",
+   "id": "5e872260",
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "74c6c941",
+   "execution_count": 27,
+   "id": "3b940475",
    "metadata": {
     "scrolled": true
    },
@@ -96,31 +96,31 @@
      "output_type": "stream",
      "text": [
       "Fill in your nameFatos\n",
-      "City you live inOslo\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m name\u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFill in your name\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m city\u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCity you live in\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcity\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+      "City you live inOslo\n",
+      "Welcome Fatosfrom Oslo\n"
      ]
     }
    ],
    "source": [
     "name= input(\"Fill in your name\")\n",
     "city= input(\"City you live in\")\n",
-    "print( name + city)"
+    "print(\"Welcome \" + name + \"from \"+ city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "203b8c2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(print)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ebf53d1",
+   "id": "d7293b41",
    "metadata": {},
    "outputs": [],
    "source": []
