--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ed3eb68b",
+   "id": "5c973334",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "77685e62",
+   "id": "e50b023b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865b6460",
+   "id": "602fbcde",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8112c21",
+   "id": "6d93aa90",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3070cc95",
+   "id": "9fe8b1ff",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f496f47c",
+   "id": "395ad06b",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f11bb13b",
+   "id": "b24a2991",
    "metadata": {},
    "outputs": [
     {
@@ -113,8 +113,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "41899a48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "145\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(129+16)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dce7ce10",
+   "id": "c86068fe",
    "metadata": {},
    "outputs": [],
    "source": []
