--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1c522648",
+   "id": "4d0cb299",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd74171e",
+   "id": "6063abe7",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f903b842",
+   "id": "7c29701e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1654dd97",
+   "id": "08c0e79e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc8f564",
+   "id": "eb8f8b48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfcc217",
+   "id": "de878c4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dell(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c3e1854",
    "metadata": {},
    "outputs": [],
    "source": []
