--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d935ae74",
+   "id": "ad776405",
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "878f5e60",
+   "execution_count": 46,
+   "id": "909256bb",
    "metadata": {},
    "outputs": [
     {
@@ -71,20 +71,22 @@
      "text": [
       "Enter Name: Dima\n",
       "Enter City: Krakow\n",
-      "Enter number: 5\n"
+      "Enter number: 5\n",
+      "Hello, Dima from Krakow 5 times!\n"
      ]
     }
    ],
    "source": [
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
-    "x = input ('Enter number: ')"
+    "x = input ('Enter number: ')\n",
+    "print ('Hello, ' + name + ' from ' + city + ' ' + x + ' times!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9974f1ec",
+   "id": "8753798d",
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +97,12 @@
      ]
     }
    ],
-   "source": [
-    "print ('Hello, ' + name + ' from ' + city + ' ' + x + ' times!')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa4ba77",
+   "id": "9985c48b",
    "metadata": {},
    "outputs": [],
    "source": []
