--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ad776405",
+   "id": "de192b3b",
    "metadata": {},
    "outputs": [
     {
@@ -61,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "909256bb",
+   "execution_count": 47,
+   "id": "d9d62494",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Name: Dima\n",
-      "Enter City: Krakow\n",
+      "Enter Name: dima\n",
+      "Enter City: krakow\n",
       "Enter number: 5\n",
-      "Hello, Dima from Krakow 5 times!\n"
+      "Hello dima from krakow 5 times!\n"
      ]
     }
    ],
@@ -80,13 +80,13 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "print ('Hello, ' + name + ' from ' + city + ' ' + x + ' times!')"
+    "print (f'Hello {name} from {city} {x} times!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8753798d",
+   "id": "150a9187",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9985c48b",
+   "id": "bbffd5f6",
    "metadata": {},
    "outputs": [],
    "source": []
