--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "915a5c12",
+   "id": "838b37b7",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed284f85",
+   "id": "8555a6aa",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1fa6a22a",
+   "id": "b550f0f2",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fd3a94b3",
+   "id": "fd503dff",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ec84c785",
+   "id": "a7397527",
    "metadata": {
     "scrolled": true
    },
@@ -109,21 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "db1fe7c9",
+   "execution_count": null,
+   "id": "68dd1adf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "del(print)"
+    "print(f\"Hello, ´±≈≈[|§∞∞09+0+09+08+09±≈][]|[]`+98)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cff28217",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
