--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c973334",
+   "id": "deac084a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e50b023b",
+   "id": "47d84085",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602fbcde",
+   "id": "5c4b4ab1",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d93aa90",
+   "id": "e8569be4",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9fe8b1ff",
+   "id": "66835db7",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "395ad06b",
+   "id": "d6e82898",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b24a2991",
+   "id": "8652e43b",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "41899a48",
+   "id": "8392be47",
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +131,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "abda0304",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Matt from Wroclaw.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Hello, {name} from {city}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c86068fe",
+   "id": "e3619c6f",
    "metadata": {},
    "outputs": [],
    "source": []
