--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f40f22e0",
+   "id": "6753142c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b65339a",
+   "id": "d068b7e7",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd84bd41",
+   "id": "a682cbeb",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92c50e23",
+   "id": "ed46ef61",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "8107b16f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Joe from Vancouver!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (f\"Hello {name} from {city}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7dbf6d43",
+   "id": "e193825e",
    "metadata": {},
    "outputs": [],
    "source": []
