--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adce0c24",
+   "id": "6ca5fa4d",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3a95a080",
+   "id": "aef4fe10",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61ae4cd5",
+   "id": "ddda40cd",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f69f280",
+   "id": "0cf210eb",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5b20de7",
+   "id": "fbbc4376",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99b54565",
+   "id": "75c9a27c",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0aeed39d",
+   "id": "1e7338ca",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdfabb26",
+   "id": "16fa31a6",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e90dca68",
+   "id": "614619c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "223bbaff",
+   "id": "1a89a5db",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af57e86",
+   "id": "cb566746",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f4618bb9",
+   "id": "77611e75",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "786b9858",
+   "id": "0b85ba00",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b740db32",
+   "id": "1c4f10f3",
    "metadata": {},
    "outputs": [
     {
@@ -269,27 +269,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1c9df619",
+   "execution_count": 23,
+   "id": "b977df7c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated f-string literal (detected at line 1) (679307252.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[22], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Hello, {name} from {city})\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated f-string literal (detected at line 1)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, shraddha from Reading.\n"
      ]
     }
    ],
    "source": [
-    "print(f'Hello, {name} from {city}.)"
+    "print(f'Hello, {name} from {city}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7caaaedb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 20 = 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "\n",
+    "print(f'{x} + {y} = {x+y}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891298f3",
+   "id": "dc275b66",
    "metadata": {},
    "outputs": [],
    "source": []
