--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c2a377ad",
+   "id": "aa4e27a1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "39311867",
+   "id": "9d642231",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dab18e54",
+   "id": "d0782a05",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69916a19",
+   "id": "baeb0330",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ec735ed4",
+   "id": "238f6d17",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "68bdb0ea",
+   "id": "597e0f38",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "69890b3a",
+   "id": "d32fcb00",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb8c279",
+   "id": "e649063b",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a2b91e2b",
+   "id": "84c456dd",
    "metadata": {},
    "outputs": [
     {
@@ -168,10 +168,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7069a40d",
+   "id": "fc76aef7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "print (f )"
+   ]
   }
  ],
  "metadata": {
