--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "838b37b7",
+   "id": "71f13cc2",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8555a6aa",
+   "id": "8fe2925f",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b550f0f2",
+   "id": "a5f871e7",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fd503dff",
+   "id": "606e1130",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a7397527",
+   "id": "665c6c00",
    "metadata": {
     "scrolled": true
    },
@@ -109,13 +109,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "949d0ed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,Fatos from Oslo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Hello,{name} from {city}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "68dd1adf",
+   "id": "98efe425",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(f\"Hello, ´±≈≈[|§∞∞09+0+09+08+09±≈][]|[]`+98)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
