--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aa4e27a1",
+   "id": "de1eb1e0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d642231",
+   "id": "79d302a7",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d0782a05",
+   "id": "6934eb3e",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "baeb0330",
+   "id": "78c5ba62",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "238f6d17",
+   "id": "bcd38df1",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "597e0f38",
+   "id": "ff5f3e72",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d32fcb00",
+   "id": "27306df4",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e649063b",
+   "id": "03f7e907",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "84c456dd",
+   "id": "eab1b983",
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +167,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc76aef7",
+   "execution_count": 18,
+   "id": "1627940d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 20 = 30\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
     "y = 20\n",
-    "print (f )"
+    "print (f'{x} + {y} = {x+y}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afcd8c9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
