--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "931a7883",
+   "id": "ac0a5715",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "598fc735",
+   "id": "89928ad5",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "34b2885c",
+   "id": "e0c4c46c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45d3ee7e",
+   "id": "d32ea9c2",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f33651c",
+   "id": "0c7fddb9",
    "metadata": {},
    "outputs": [
     {
@@ -100,13 +100,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "cb91574f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 == 5*2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dd10046e",
+   "id": "0d56f770",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "10 == 5_+)()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
